# LaboratorioProgrammazione

./: Agenda.cpp  Agenda.h  CMakeLists.txt  Date.cpp  Date.h  ToDo.cpp  ToDo.h  main.cpp
Google_tests/: AgendaTest.cpp  CMakeLists.txt
Google_tests/lib/: CMakeLists.txt
googleTest/: ArrowTest.cpp  CMakeLists.txt  Tests.cpp
